--- a/WalletKata.Interfaces/WalletKata.Interfaces.csproj
+++ b/WalletKata.Interfaces/WalletKata.Interfaces.csproj
@@ -1,16 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{25948D21-7879-4F2F-B6BB-F4238CA6CDAE}</ProjectGuid>
+    <ProjectGuid>{34766323-B3A6-4263-B4B5-C62DD632FAD2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WalletKata</RootNamespace>
-    <AssemblyName>WalletKata</AssemblyName>
+    <RootNamespace>WalletKata.Interfaces</RootNamespace>
+    <AssemblyName>WalletKata.Interfaces</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,25 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exceptions\ThisIsAStubException.cs" />
-    <Compile Include="Exceptions\UserNotLoggedInException.cs" />
-    <Compile Include="Users\UserSession.cs" />
+    <Compile Include="Users\User.cs" />
+    <Compile Include="Wallets\IWalletDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Wallets\WalletDAO.cs" />
-    <Compile Include="Wallets\WalletService.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WalletKata.Interfaces\WalletKata.Interfaces.csproj">
-      <Project>{34766323-b3a6-4263-b4b5-c62dd632fad2}</Project>
-      <Name>WalletKata.Interfaces</Name>
-    </ProjectReference>
+    <Compile Include="Wallets\Wallet.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
