Make user session injectable, and remove badly made singleton management. This could be managed by dependency injection engine.

--- a/WalletKata.Interfaces/WalletKata.Interfaces.csproj
+++ b/WalletKata.Interfaces/WalletKata.Interfaces.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Users\IUserSession.cs" />
     <Compile Include="Users\User.cs" />
     <Compile Include="Wallets\IWalletDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
